--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+
 .App {
   text-align: center;
+
+
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -36,3 +41,17 @@
     transform: rotate(360deg);
   }
 }
+footer {
+  text-align: center;
+
+  background-image: linear-gradient(90deg, rgb(84, 0, 149), rgb(180, 116, 253));
+  color: white;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 2.5rem;
+
+}
+
+
+
