--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 
+
+
 .App {
   text-align: center;
-
-
 }
 
 
@@ -46,10 +46,10 @@ footer {
 
   background-image: linear-gradient(90deg, rgb(84, 0, 149), rgb(180, 116, 253));
   color: white;
-  position: absolute;
-  bottom: 0px;
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  height: 2.5rem;
+  height: 3rem;
 
 }
 
