--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -3,4 +3,20 @@
     min-width: 100%;
     max-width: 100%;
     max-height: 300px;
+    border-radius: 1px 1px 30px 40px;
+    box-shadow: black 3px 3px 8px;
+
 }
+
+p{
+    text-align: center;
+    font-size: 24px;
+
+}
+
+h1 {
+    text-align: center;
+    font-size: 60px;
+}
+
+
