--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,16 @@
   text-align: center;
 }
 
-
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: linear-gradient(144deg, rgba(175, 64, 255, 0.12), rgba(91, 66, 243, 0.09) 50%, rgba(0, 0, 0, 0.09));
+  border-radius: 50px;
+}
+main {
+  flex: 1;
+}
 
 .App-logo {
   height: 40vmin;
@@ -42,16 +51,17 @@
   }
 }
 footer {
-  text-align: center;
+  /*text-align: center;*/
 
   background-image: linear-gradient(90deg, rgb(84, 0, 149), rgb(180, 116, 253));
   color: white;
-  position: fixed;
-  bottom: 0;
+  position: page;
   width: 100%;
-  height: 3rem;
+  height: 2rem;
+  border-radius: 2px;
 
 }
+
 
 
 
