--- a/src/components/VocalComponent.css
+++ b/src/components/VocalComponent.css
@@ -21,11 +21,12 @@
 
 .player {
     border-radius: 12px;
-    background-color: rgba(0, 0, 0, 0.38);
+    background-color: rgba(152, 74, 255, 0.15);
     width: 506px;
     box-shadow: 0px 5px 20px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     border-style: solid;
+
 }
 .player .head {
     padding: 15px;
@@ -35,6 +36,7 @@
     width: 100%;
     position: relative;
     overflow: hidden;
+
 
 }
 .player .head .front {
@@ -50,29 +52,40 @@
     left: -10px;
     position: absolute;
     background-position: center;
-    background-size: cover;
-    background-image: url("https://images.unsplash.com/photo-1471623817296-aa07ae5c9f47");
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
+    background-size: 200px;
+    background-image: url("https://images.unsplash.com/photo-1549490349-8643362247b5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2000&q=80");
+    /*-webkit-filter: blur(1px);*/
+    /*filter: blur(1px);*/
+    border-radius: 40px;
 
 }
 
 
 .player .head .tags span {
+
     border-radius: 3px;
     padding: 2px 11px;
-    margin: 1px 2px;
+    margin: 1px 2px  4px;
     background-color: #15A58B;
     font-weight: bold;
+
+
 }
 .player .head .titulo_song {
     font-size: 20px;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.75);
+    background-color: rgba(169, 59, 255, 0.49);
+margin-bottom: 10px;
+    font-weight: bold;
+    border-radius: 3px;
+    max-width: 300px;
+    min-width: 300px;
 }
 
 .audio-player {
     min-width: 500px;
     margin-top: 5px;
+
 }
 
 
@@ -83,6 +96,26 @@
     justify-content: space-around;
 
 
+
+
+}
+.infos {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 100px;
+    min-height: 100px;
+
+}
+
+.tags2 {
+    font-size: 20px;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.75);
+    background-color: rgba(21, 165, 139, 0.07);
+
+    font-weight: bold;
+    border-radius: 3px;
 
 }
 
