--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -6,17 +6,29 @@
     border-radius: 1px 1px 30px 40px;
     box-shadow: black 3px 3px 8px;
 
+
 }
 
 p{
     text-align: center;
     font-size: 24px;
 
+
+
 }
 
 h1 {
     text-align: center;
     font-size: 60px;
+}
+.inner-container-home {
+    display: flex;
+   flex-direction: column;
+    align-items: center;
+
+}
+.inner-text-home {
+    max-width: 1000px;
 }
 
 
