--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -3,7 +3,8 @@
 
 
 /* Add padding to containers */
-.container {
+.form-container {
+
     padding: 160px;
 
 
@@ -41,6 +42,7 @@ hr {
     cursor: pointer;
     width: 100%;
     opacity: 0.9;
+
 }
 
 .registerbtn:hover {
@@ -69,6 +71,12 @@ a {
     border-radius: 15px;
 
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+}
+.upload-image {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+
 }
 
 
