--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -1,8 +1,5 @@
-* {
-    box-sizing: border-box}
 
 
-/* Add padding to containers */
 .form-container {
 
     padding: 160px;
@@ -10,8 +7,8 @@
 
 }
 
-/* Full-width input fields */
-input[type=text], input[type=password] {
+
+input[type=text], input[type=password],input[type=email], textarea {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -26,13 +23,13 @@ input[type=text]:focus, input[type=password]:focus {
     outline: none;
 }
 
-/* Overwrite default styles of hr */
+
 hr {
     border: 1px solid #f1f1f1;
     margin-bottom: 25px;
 }
 
-/* Set a style for the submit/register button */
+
 .registerbtn {
     background-image: linear-gradient(90deg, rgb(84, 0, 149), rgb(180, 116, 253));
     color: white;
@@ -49,12 +46,12 @@ hr {
     opacity:1;
 }
 
-/* Add a blue text color to links */
+
 a {
     color: dodgerblue;
 }
 
-/* Set a grey background color and center the text of the "sign in" section */
+
 .signin {
     background-color: #f1f1f1;
     text-align: center;
