--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -70,3 +70,24 @@
     opacity: 0;
     transition: transform 150ms ease-out, opacity 150ms ease-out;
 }
+
+.button-search {
+    background-color: #d5abff;
+    border-radius: 20px;
+   border-width: 1px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+.results-list {
+    list-style-type: none;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: rgba(255, 255, 255, 0.67);
+    border-radius: 20px;
+}
+
+.result-item {
+    display: flex;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
